Mar 10 2004  devel  Fixed a segfault in the client command protocol
                    Improved error reporting for madwifi monitor mode
Mar 08 2004  devel  Fixed a segfault with a 0-length macaddr struct (exposed
                     by an empty manuf map file).  No security implications.
                    Changed ifdef block in pcapsource, added ifndef to 
                     compensate for pcap on some platforms
Mar 07 2004  devel  Fixed another bsd compile error
                    Revamped error reporting to print errors to console even
                     when silent if there are no clients.  Should force showing
                     fast-startup errors that got hidden before.
Mar 04 2004  devel  Fixed undefined function error on BSDs introduced from
                     other error catching
                    Fixed stupid config test copy and paste bug for GMP
                    Reordered orinoco monitor commands
                    More major gpsmap updates
                     Total rewrite of interpolation.  Previous code was 
                      terminally broken.  New interpolation algos are MUCH
                      more adept at handling "generic wardriving" data.
                     Moved interpolation to only process "relevant center"
                      (see previous gpsmap update) instead of every point
                     Fixed legend drawing when using default network colors
                      and doing power interpolation
                    Tweaked orinoco channel control - should eliminate errors
                     seen with some older drivers and -devel
Mar 03 2004  devel  Rewrote gpsmap network-center guessing to find groups of
                     sample points and use those
                    Started rewriting gpsmap to use GMP for math.  GMP is
                     now required.
                    Added support for ADMTek cards
Mar 01 2004  devel  Tweaked error reporting to client.